# yagit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  rebuild.sh
src/: main.c
src/commands/: add.c  cat-file.c  commit.c  init.c  kill.c  log.c  status.c
src/common/: check.c  config.c  globals.c  initialize.c  limbo.c  object.c  stage.c  utils.c
src/include/: add.h  cat-file.h  check.h  commands.h  commit.h  config.h  globals.h  init.h  initialize.h  kill.h  limbo.h  log.h  object.h  platform.h  stage.h  status.h  utils.h
src/platform/: platform.h
